<resources>
    <string name="app_name">Agenda</string>
    <string name="minha_agenda">Minha Agenda</string>
    <string name="todo">TODO</string>
    <string name="e_mail">E-mail</string>
    <string name="senha">Senha</string>
    <string name="entrar">Entrar</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="cadastro">Cadastro</string>
    <string name="adicionar">Adicionar</string>
    <string name="phone">Phone</string>
    <string name="nome">Nome</string>
    <string name="endere_o">Endereço</string>
    <string name="salvar">Salvar</string>
    <string name="criar_contato">Criar contato</string>
    <string name="phone">Phone</string>
    <string name="nome">Nome</string>
    <string name="endere_o">Endereço</string>
    <string name="telefone">Telefone</string>
    <string name="tipo">Tipo</string>
    <string-array name="array_types">
        <item>Casa</item>
        <item>Trabalho</item>
        <item>Outro</item>
    </string-array>
</resources>