<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F0F0F5"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/titleLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/minha_agenda"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintHorizontal_bias="0.47"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="138dp"
        android:layout_height="109dp"
        android:layout_marginTop="84dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_menu_today"
        android:contentDescription="@string/todo" />

    <EditText
        android:id="@+id/idEmailLogin"
        android:layout_width="263dp"
        android:layout_height="53dp"
        android:layout_marginTop="44dp"
        android:autofillHints=""
        android:background="@color/white"
        android:ems="10"
        android:hint="@string/e_mail"
        android:inputType="textPersonName"
        android:textAlignment="viewStart"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/titleLogin"
        app:layout_constraintStart_toStartOf="@+id/titleLogin"
        app:layout_constraintTop_toBottomOf="@+id/titleLogin" />

    <EditText
        android:id="@+id/idPasswordLogin"
        android:layout_width="263dp"
        android:layout_height="53dp"
        android:layout_marginTop="28dp"
        android:autofillHints=""
        android:background="@color/white"
        android:ems="10"
        android:hint="@string/senha"
        android:inputType="textPassword"
        android:textAlignment="viewStart"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/idEmailLogin"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/idEmailLogin"
        app:layout_constraintTop_toBottomOf="@+id/idEmailLogin" />

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="142dp"
        android:layout_height="51dp"
        android:layout_marginTop="48dp"
        android:background="#00BCD4"
        android:onClick="AuthenticationLogin"
        android:text="@string/entrar"
        app:layout_constraintEnd_toEndOf="@+id/idPasswordLogin"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="@+id/idPasswordLogin"
        app:layout_constraintTop_toBottomOf="@+id/idPasswordLogin" />

    <Button
        android:id="@+id/buttonSignIn"
        android:layout_width="142dp"
        android:layout_height="51dp"
        android:layout_marginTop="24dp"
        android:background="#CFD9DA"
        android:onClick="ButtonSignIn"
        android:text="@string/cadastrar"
        app:layout_constraintEnd_toEndOf="@+id/idPasswordLogin"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="@+id/idPasswordLogin"
        app:layout_constraintTop_toBottomOf="@+id/buttonLogin" />

</android.support.constraint.ConstraintLayout>