<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F0F0F5"
    tools:context=".SignIn">

    <Button
        android:id="@+id/button3"
        android:layout_width="142dp"
        android:layout_height="51dp"
        android:layout_marginTop="48dp"
        android:background="#00BCD4"
        android:onClick="SignIn"
        android:text="@string/cadastrar"
        app:layout_constraintEnd_toEndOf="@+id/idPassword"
        app:layout_constraintHorizontal_bias="0.512"
        app:layout_constraintStart_toStartOf="@+id/idPassword"
        app:layout_constraintTop_toBottomOf="@+id/idPassword" />

    <EditText
        android:id="@+id/idPassword"
        android:layout_width="263dp"
        android:layout_height="53dp"
        android:layout_marginTop="28dp"
        android:autofillHints=""
        android:background="@color/white"
        android:ems="10"
        android:hint="@string/senha"
        android:inputType="textPassword"
        android:textAlignment="viewStart"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/idEmailLogin"
        app:layout_constraintStart_toStartOf="@+id/idEmailLogin"
        app:layout_constraintTop_toBottomOf="@+id/idEmailLogin" />

    <EditText
        android:id="@+id/idEmailLogin"
        android:layout_width="263dp"
        android:layout_height="53dp"
        android:layout_marginTop="44dp"
        android:autofillHints=""
        android:background="@color/white"
        android:ems="10"
        android:hint="@string/e_mail"
        android:inputType="textPersonName"
        android:textAlignment="viewStart"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="138dp"
        android:layout_height="109dp"
        android:layout_marginTop="84dp"
        android:contentDescription="@string/todo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_menu_today" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/cadastro"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/imageView3"
        app:layout_constraintStart_toStartOf="@+id/imageView3"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />


</android.support.constraint.ConstraintLayout>